--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,24 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
-      - image: edwardsdl/netcore-pipeline:latest
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
-#      - run:
-#          name: Clone
-#          command: /stages/01_clone.sh
       - checkout
       - run:
           name: Build
-          command: /stages/02_build.sh
+          command: |
+            dotnet restore
+            dotnet build -c Release
+    
       - run:
-          name: Test
-          command: /stages/03_test.sh
-      - run:
-          name: Archive
-          command: /stages/04_archive.sh
+          working_directory: ./ValueTests
+          name: "test-svc"
+          command: |
+            dotnet test
+
+#      - run:
+#          name: Archive
+#          command: /stages/04_archive.sh
