--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,20 @@ jobs:
           command: |
             dotnet test
 
+#     - run:
+#         name: Archive
+#          command: stages/04_archive.sh
+
       - run:
-          name: Archive
-          command: stages/04_archive.sh
+          name: "Deploying Application"
+          command: |
+            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
+            
+#container_port=$(jq -r .deploy.containerPort pipeline.json)
+#registry=$(jq -r .archive.registry pipeline.json)
+#repository=$(jq -r .archive.repository pipeline.json)
+#image="${registry}/${repository}:latest"
+
+#docker run -dp "${container_port}:${container_port}" "${image}"
+
+
