More config tinkering

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
 
       - run:
           name: "Deploying Application"
-          command: |
+#          command: |
             dotnet run
 #            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
             
