--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
 #          command: stages/04_archive.sh
 
       - run:
+          working_directory: ./ValueApi/bin/Release/net6.0
           name: RunApp
           command: |
             dotnet run --project ValueApi.dll
