--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
 #          command: stages/04_archive.sh
 
       - run:
-          working_directory: ./ValueApi
+          working_directory: ValueApi/bin/Release/net6.0
           name: RunApp
           command: |
-            dotnet run --project ValueApi.dll
+            dotnet run ValueApi.dll
 #            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
             
 #container_port=$(jq -r .deploy.containerPort pipeline.json)
