--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,11 @@ jobs:
 #         name: Archive
 #          command: stages/04_archive.sh
 
-#      - run:
-#          working_directory: /app
-#          name: Running App
-#          command: |
-#            dotnet /app/ValueApi.dll
+      - run:
+          working_directory: /app
+          name: Running App
+          command: |
+            dotnet /app/ValueApi.dll
 
 #            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
             
