--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,17 @@ jobs:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
+#      - setup_remote_docker:
+#          docker_layer_caching: true
       - checkout
       - run:
-          name: Build
-          command: |
+          name: Restore packages
+          command:
             dotnet restore
-            dotnet build -c Release -o /app
-    
+      - run:
+          name: Build App
+          command:
+            dotnet build -c Release -o /app  
       - run:
           working_directory: ./ValueTests
           name: "test-svc"
@@ -27,8 +29,8 @@ jobs:
           working_directory: /app
           name: Running App
           command: |
-            dotnet /app/ValueApi.dll
-
+#            dotnet /app/ValueApi.dll
+             dotnet run
 #            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
             
 #container_port=$(jq -r .deploy.containerPort pipeline.json)
