--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
 #          command: stages/04_archive.sh
 
       - run:
-          working_directory: /app
+#          working_directory: /app
           name: Running App
           command: |
 #            dotnet /app/ValueApi.dll
