--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
 #          working_directory: /app
           name: Running App
           command:
-#            dotnet /app/ValueApi.dll
-             dotnet run
+            dotnet /app/ValueApi.dll
+#             dotnet run
 #            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
             
 #container_port=$(jq -r .deploy.containerPort pipeline.json)
