--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,19 +2,40 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: bct01/netcore-pipeline:latest
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
-      - setup_remote_docker:
-          docker_layer_caching: true
+#      - setup_remote_docker:
+#          docker_layer_caching: true
+      - checkout
       - run:
-          name: Clone
-          command: /stages/01_clone.sh
+          name: Restore packages
+          command:
+            dotnet restore
       - run:
-          name: Build
-          command: /stages/02_build.sh
+          name: Build App
+          command:
+            dotnet build -c Release -o /app  
       - run:
-          name: Test
-          command: /stages/03_test.sh
+          working_directory: ./ValueTests
+          name: "test-svc"
+          command:
+            dotnet test -c Release -o /app
+
+#     - run:
+#         name: Archive
+#          command: stages/04_archive.sh
+
       - run:
-          name: Archive
-          command: /stages/04_archive.sh
+#          working_directory: /app
+          name: Running App
+          command:
+            dotnet /app/ValueApi.dll
+#             dotnet run
+#            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
+            
+#container_port=$(jq -r .deploy.containerPort pipeline.json)
+#registry=$(jq -r .archive.registry pipeline.json)
+#repository=$(jq -r .archive.repository pipeline.json)
+#image="${registry}/${repository}:latest"
+
+#docker run -dp "${container_port}:${container_port}" "${image}"
