--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ jobs:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
-#      - setup_remote_docker:
-#          docker_layer_caching: true
+      - setup_remote_docker:
+          docker_layer_caching: true
       - checkout
       - run:
           name: Restore packages
@@ -21,21 +21,16 @@ jobs:
           command:
             dotnet test -c Release -o /app
 
-#     - run:
-#         name: Archive
-#          command: stages/04_archive.sh
+##     - run:
+##         name: Archive
+##          command: stages/04_archive.sh
 
-      - run:
-#          working_directory: /app
-          name: Running App
-          command:
-            dotnet /app/ValueApi.dll
-#             dotnet run
-#            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
-            
-#container_port=$(jq -r .deploy.containerPort pipeline.json)
-#registry=$(jq -r .archive.registry pipeline.json)
-#repository=$(jq -r .archive.repository pipeline.json)
-#image="${registry}/${repository}:latest"
+#      - run:
+##          working_directory: /app
+#          name: Running App
+#          command:
+#            dotnet /app/ValueApi.dll
+##             dotnet run
+##            docker run -dp "5000:5000" "docker.io/edwardsdl/sample-netcore:latest"
+           
 
-#docker run -dp "${container_port}:${container_port}" "${image}"
