--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
           command:
             dotnet test -c Release -o /app
 
-##     - run:
-##         name: Archive
-##          command: stages/04_archive.sh
+     - run:
+         name: Archive
+          command: stages/04_archive.sh
 
 #      - run:
 ##          working_directory: /app
