--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,21 +8,10 @@ jobs:
         docker_layer_caching: true
     - checkout
     - run:
-        name: Restore packages
-        command: dotnet restore
-    - run:
-        name: Build App
-        command: dotnet build -c Release -o /app
-    - run:
-        working_directory: ./ValueTests
-        name: test-svc
-        command: dotnet test -c Release -o /app
-    - run:
         name: Archive
         command: |
-          docker login -u "${DOCKER_USERNAME?:}" -p "${DOCKER_PASSWORD?:}" "${registry}"
-          docker build -t "${image}" .
-          docker push "docker.io/bct01/sample-netcore-01"
+          docker login -u "${DOCKER_USERNAME}" -p "{$DOCKER_PASSWORD}" "${registry}"
+          docker build -t "${DOCKER_IMAGE}"  .
 workflows:
   workflow:
     jobs:
