--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,19 @@
 version: 2.1
-jobs:
-  build:
-    docker:
-    - image: mcr.microsoft.com/dotnet/sdk:6.0
+
+orbs:
+  win:
+    circleci/windows@4.1
+
+jobs:  
+  windows:
+    executor:
+      name: win/default
     steps:
-    - setup_remote_docker:
-        docker_layer_caching: true
-    - checkout
-    - run:
-        name: Archive
-        command: |
-          docker login -u "${DOCKER_USERNAME}" -p "{$DOCKER_PASSWORD}" "${registry}"
-          docker build -t "${image}"  .
+      - run: curl -o C:\Users\circleci\Downloads\node-v16.17.0-x86.msi https://nodejs.org/dist/v16.17.0/node-v16.17.0-x86.msi
+      - run: MsiExec.exe /i C:\Users\circleci\Downloads\node-v16.17.0-x86.msi /qn
+      - run: npm i -g npm-upgrade
+      - run: npm install -g @datadog/datadog-ci
 workflows:
-  workflow:
+  ci:
     jobs:
-    - build
+      - windows
