--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,13 @@ jobs:
         working_directory: ./ValueTests
         name: test-svc
         command: dotnet test -c Release -o /app
-    - run:
-        name: Archive
-        command: |
-          curl -sSL https://get.docker.com/ | sh
-          docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}" "${registry}"
-          docker build -t "${DOCKER_IMAGE}" .
-          docker push "docker.io/bct01/sample-netcore-01"
+#    - run:
+#        name: Archive
+#        command: |
+#          curl -sSL https://get.docker.com/ | sh
+#          docker login -u "${DOCKER_USERNAME}" -p "${DOCKER_PASSWORD}" "${registry}"
+#          docker build -t "${DOCKER_IMAGE}" .
+#          docker push "docker.io/bct01/sample-netcore-01"
 workflows:
   workflow:
     jobs:
